--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <div class="box zone"><img src="multicol.jpg"></div>
     <div class="box zone"><img src="multicol.jpg"></div>
   </div>
-  <footer class="zone yellow">made by z => m</footer>
+  <footer class="zone yellow">inspired by Z => M</footer>
 </body>
 </html>
